--- a/server/views/CreditNote.ejs
+++ b/server/views/CreditNote.ejs
@@ -87,7 +87,7 @@
                         <th></th>
                         <th></th>
                         <th>Total Previous Customer Credit</th>
-                        <th><%=data.total%>  </th>
+                        <th><%=data.customerCredit%>  </th>
                     </tr>
                 </tfoot>
             </table>
