--- a/web1/src/app/admin/product-manage/product-manage.component.html
+++ b/web1/src/app/admin/product-manage/product-manage.component.html
@@ -54,7 +54,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
-                                    <button class="bg_none" (click)="showAdd = !showAdd;">
+                                    <button class="bg_none" (click)="showAdd = !showAdd; addClick()">
                                         <mat-icon class="col-white plus_icon" >add</mat-icon>
                                     </button>
                                     <button [disabled]="selectedProduct === ''" class="bg_none" (click)="openModal(content,selectedProduct,selectedHSNCode,selectedGSTPercentage,selectedGSTType)">
@@ -84,7 +84,7 @@
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Percentage</mat-label>
-                                        <input matInput type="number" required="true" name="NewGSTPercentage" (blur)="gstType()" [(ngModel)]="newProduct.GSTPercentage"
+                                        <input matInput type="number" required="true" name="NewGSTPercentage"  [(ngModel)]="newProduct.GSTPercentage"
                                            #GSTPercentagecontrol>
                                     </mat-form-field>
                                 </div>
@@ -99,7 +99,7 @@
                                 <div *ngIf="newProduct.GSTPercentage !== 0"  class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
-                                        <mat-select name="NewGSTType" (blur)="gstType()" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                                        <mat-select name="NewGSTType"  [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                                             <mat-option value="IGST">IGST</mat-option>
                                             <mat-option value="CGST-SGST">CGST-SGST</mat-option>
                                         </mat-select>
@@ -257,7 +257,7 @@
                 <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>GST Percentage</mat-label>
-                        <input matInput type="number" required="true" name="NewGSTPercentage" (blur)="gstType()" [(ngModel)]="newProduct.GSTPercentage"
+                        <input matInput type="number" required="true" name="NewGSTPercentage"  [(ngModel)]="newProduct.GSTPercentage"
                            #GSTPercentagecontrol>
                     </mat-form-field>
                 </div>
@@ -272,14 +272,14 @@
                 <div *ngIf="newProduct.GSTPercentage !== 0"  class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>GST Type</mat-label>
-                        <mat-select name="NewGSTType" (blur)="gstType()" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                        <mat-select name="NewGSTType"  [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                             <mat-option value="IGST">IGST</mat-option>
                             <mat-option value="CGST-SGST">CGST-SGST</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-                    <button type="submit" (click)="gstType()" class="ms-2" [disabled]="GstTypeDis" mat-raised-button color="primary" >
+                    <button type="submit"  class="ms-2" [disabled]="GstTypeDis" mat-raised-button color="primary" >
                         update
                     </button>
                 </div>
