--- a/web1/src/app/common/about/about.component.html
+++ b/web1/src/app/common/about/about.component.html
@@ -14,11 +14,25 @@
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
                            <div class="col-12" style="font-size: 20px; line-height: 30px;">
+                               <h2 style="color: #ffea00;"> New Updates Date 26-01-2024 </h2>
+                               <P>1. Employee profile added with logout button. check in employee login.</P>
+                               <P>2. New option added for employees "Discount permission after the bill"</P>
+                               <P>Follow few steps</P>
+                                    <ul>
+                                        <li>Click on the administration on the menu bar </li>
+                                        <li>Click on the employee</li>
+                                        <li>Click on the edit button</li>
+                                        <li>On/off option "Discount permission after the bill</li>
+                                    </ul>
+                            </div>
+                        </div>
+                        <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
+                           <div class="col-12" style="font-size: 20px; line-height: 30px;">
                                <h2 style="color: #ffea00;"> New Updates Date 17-01-2024 </h2>
                                <P>1. Expenses Report Total Calculation Done.</P>
                                <P>2. Expenses type filter done on expenses Report.</P>
                                <P>3. Date auto fill on the expenses page.</P>
-                               <P>3. Reminder pop up correct.</P>
+                               <P>4. Reminder pop up correct.</P>
                             </div>
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
