--- a/web1/src/app/common/common.component.css
+++ b/web1/src/app/common/common.component.css
@@ -18,6 +18,32 @@
   }
 }
 
+.profile-container {
+  position: relative;
+}
+
+.profile-box {
+  position: absolute;
+  width: 200px;
+  top: 40px;
+  right: 20px;
+  background-color: #7685f314;
+  padding: 20px;
+  text-align: center;
+  border-radius: 0px 0px 30px 30px;
+  /* border: 2px solid #ff5100; */
+  box-shadow: 7px 7px 4px #3e3e3e1a;
+}
+
+.btnuser{
+  font-size: 13px;
+    background: none;
+    border-radius: 20px;
+    padding: 2px 10px;
+    border: 2px solid #ff5100;
+    font-weight: 600;
+}
+
 .blink {
   animation: blink 1s infinite; /* Change the duration and iteration count as needed */
 }
